fixed align

--- a/Jakesite.css
+++ b/Jakesite.css
@@ -10,4 +10,5 @@
     position: fixed;
     right: 0;
     width: 50%;
+    z-index: -1;
 }
